--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -4,7 +4,7 @@
 .movieRow h2 {
   margin: 0px 0px 0px 30px;
 }
-.movieRow--listarea {
+.movie-row--listarea {
   overflow-x: hidden;
   padding-left: 30px;
 }
