--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,16 @@
 
 body {
   background-color: black;
-  color: aliceblue;
+  color: white;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+}
+
+.lists {
+  margin-top: -150px;
+}
+
+.footer {
+  margin: 50px 0;
+  text-align: center;
 }
