--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -86,3 +86,28 @@
   font-size: 18px;
   color: gray;
 }
+
+@media (max-width: 760px) {
+  .featured {
+    height: 90vh;
+  }
+  .featured--name {
+    font-size: 16px;
+  }
+  .featured--info {
+    font-size: 16px;
+  }
+
+  .featured--description {
+    font-size: 14px;
+    max-width: 100%;
+    margin-right: 30px;
+  }
+  .featured--buttons,
+  .featured--watchbutton {
+    font-size: 16px;
+  }
+  .featured--genres {
+    font-size: 14px;
+  }
+}
